# BVG-Display

./: .env.example  README.md  pyproject.toml
docs/: raspberry-pi-setup.md
scripts/: bvg-display.service
src/bvg_display/: client.py  config.py  display.py  fetch_once.py  main.py  models.py
tests/: test_client.py  test_config.py  test_display.py  test_main.py  test_models.py
