[tool.poetry]
name = "bvg-display"
version = "0.1.0"
description = ""
authors = ["Linus Seiffert <dev.linus.seiffert@outlook.com>"]
readme = "README.md"
packages = [
    {include = "bvg_display", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.33.1"
python-dotenv = "^1.2.2"
black = "^26.3.1"
pytest = "^9.0.3"
httpx = "^0.28.1"
respx = "^0.23.1"
pytest-asyncio = "==1.4.0a1"

[tool.poetry.scripts]
bvg-display="bvg_display.main:main"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
